--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     h1 {
       font-family: 'Poppins', sans-serif;
       font-weight: 700;
-      color: #0078b6;
+      color: #5ec9ff;
       text-align: center;
       margin-bottom: 40px;
     }
